docs: update MCP Catalog and add MCP Categories documentation for better server organization

--- a/docs/deploystack/mcp-catalog.mdx
+++ b/docs/deploystack/mcp-catalog.mdx
@@ -38,14 +38,9 @@ The catalog supports two types of servers:
 
 ### Categories
 
-Servers are organized into categories for easy discovery:
+Servers are organized into categories for easy discovery and filtering. Categories are simple organizational labels that group servers by their purpose or functionality.
 
-- **Development Tools**: Code analysis, Git integration, CI/CD tools
-- **Data Sources**: Database connectors, API integrations, file systems
-- **AI & ML**: Machine learning models, AI services, data processing
-- **Communication**: Chat platforms, email services, notification systems
-- **Productivity**: Task management, calendars, document processing
-- **Custom**: User-defined categories for specialized use cases
+For a complete explanation of how MCP categories work, see the [MCP Categories Guide](/deploystack/mcp-categories).
 
 **Note**: Only Global Administrators can create and manage categories.
 
